<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:weightSum="1"
    android:background="@color/bgBlue"
    android:gravity="bottom">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:layout_weight="0.21"
        android:contentDescription="@string/logo_desc"
        android:clickable="false" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_button"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="list"
        android:background="@drawable/custom_button"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fav_button"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:onClick="fav"
        android:background="@drawable/custom_button"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_button"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:onClick="settings"
        android:background="@drawable/custom_button"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/Copyrights"
            android:hint="@string/copyrights"
            android:clickable="false"
            android:textIsSelectable="false" />


</LinearLayout>
