<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="4dp"
    android:orientation="vertical"
    android:background="@color/bgBlue">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp">

            <!--<TextView-->
                <!--android:id="@+id/nazwa"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:text="Nazwa"-->
                <!--android:textStyle="bold"-->
                <!--android:textSize="18sp"-->
                <!--android:layout_marginBottom="10dp"/>-->

            <TextView
                android:id="@+id/opis"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Opis"
                android:textSize="14sp"
                android:elegantTextHeight="true"
                android:textIsSelectable="false"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"/>
            <!--android:layout_below="@id/nazwa"-->

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/foto"
                android:minHeight="50dp"
                android:minWidth="50dp"
                android:maxHeight="50dp"
                android:maxWidth="50dp"
                android:layout_below="@id/opis"
                android:layout_alignParentRight="true"
                android:scaleType="fitXY"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/button4"
                android:layout_below="@id/opis"
                android:text="@string/FavouritesButton"
                android:layout_alignParentLeft="true"
                android:background="@drawable/custom_button"/>
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonNav"
                android:layout_below="@id/button4"
                android:text="@string/Navigatebutton"
                android:layout_alignParentLeft="true"
                android:onClick="naviguj"
                android:background="@drawable/custom_button"/>

            <TextView
                android:id="@+id/GPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/ShowGPS"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_below="@id/foto"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPSLength"
                android:layout_below="@id/GPS"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10dp"
                android:id="@+id/GPSLTV" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPSLengthDane"
                android:layout_below="@id/GPS"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:id="@+id/GPSLDANE" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPSHeight"
                android:layout_below="@id/GPSLTV"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10dp"
                android:id="@+id/GPSHTV" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPSHeightDane"
                android:layout_below="@id/GPSLDANE"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:id="@+id/GPSHDANE" />

            <TextView
                android:id="@+id/MAP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/MAPtext"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_below="@id/GPSHTV"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_below="@id/MAP"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="30dp"
                android:name="com.google.android.gms.maps.MapFragment"/>

        </RelativeLayout>
    </ScrollView>



</LinearLayout>